--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-to-print": "^3.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "supabase": "^2.15.8",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
