--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "file-saver": "^2.0.5",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -75,6 +76,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
