--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jspdf": "^3.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
+    "luxon": "^3.6.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -78,6 +79,7 @@
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash": "^4.17.16",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
