--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,22 @@
 project_id = "ckkvnnphgceesuftupyj"
+[functions.save_material_closing_stock]
+enabled = true
+verify_jwt = true
+import_map = "./functions/save_material_closing_stock/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/save_material_closing_stock/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/save_material_closing_stock/*.html" ]
+
+[functions.save_product_closing_stock]
+enabled = true
+verify_jwt = true
+import_map = "./functions/save_product_closing_stock/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/save_product_closing_stock/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/save_product_closing_stock/*.html" ]
