--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@supabase/functions-js": "^2.4.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -60,6 +61,7 @@
     "luxon": "^3.6.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -81,6 +83,7 @@
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
