--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,20 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "noImplicitAny": false,
-    "noUnusedParameters": false,
+
+    // Type Safety
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+
+    // Performance & Compatibility
     "skipLibCheck": true,
     "allowJs": true,
-    "noUnusedLocals": false,
-    "strictNullChecks": false
+
+    // Modules
+    "module": "ESNext",
+    "moduleResolution": "bundler"
   }
 }
